--- a/DRL_UTE/Areas/PhongCTSV/Views/CNSinhVien/UploadExcel.cshtml
+++ b/DRL_UTE/Areas/PhongCTSV/Views/CNSinhVien/UploadExcel.cshtml
@@ -155,7 +155,7 @@
                     <div class="card my-4">
                         <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
                             <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
-                                <h6 class="text-white text-capitalize ps-3">Thêm lớp sinh viên</h6>
+                                <h6 class="text-white text-capitalize ps-3">Thêm sinh viên</h6>
                             </div>
                         </div>
                         <div style="margin:30px; color:red">@Html.ActionLink("Download File Excel Mẫu", "DownloadFile", new { fileName = "tblSinhVien.xlsx" })</div>
