--- a/DRL_UTE/Areas/PhongKHTC/Views/CNHocPhi/Index.cshtml
+++ b/DRL_UTE/Areas/PhongKHTC/Views/CNHocPhi/Index.cshtml
@@ -136,7 +136,7 @@
                                                     <td>@Html.DisplayFor(modelItem => item.ngayCham)</td>
                                                     <td>@Html.DisplayFor(modelItem => item.ngayKetThuc)</td>
                                                     <td>
-                                                        @Html.ActionLink("Cập Nhật Điểm", "Details", "CNHocPhi", new { @hocKy = @item.hocKy }, new { @class = "btn btn-success btn-sm" })
+                                                        @Html.ActionLink("Cập Nhật Học Phí", "Details", "CNHocPhi", new { @hocKy = @item.hocKy }, new { @class = "btn btn-success btn-sm" })
                                                     </td>
                                                 </tr>
                                             }
